# vdb

./: Cargo.toml  README.md
src/: chunk.rs  embed.rs  extract.rs  main.rs  qdrant.rs  render.rs
static/: index.html  utils.js
static/webapp/: render.html
