[package]
name = "vb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.1" }
clap = { version = "4.5.53", features = ["derive", "cargo"] }
fastembed = "5.3.1"
hf-hub = { version = "0.4.3", features = ["tokio"] }
qdrant-client = "1.16.0"
tokio = { version = "1", features = ["full"] }
pdf-extract = "0.10.0"
rayon = "1.10"
uuid = { version = "1", features = ["v4"] }
unidecode = "0.3.0"
unicode-segmentation = "1.10"
lopdf = "0.38.0"
pdf_oxide = "0.1"
eframe = "0.33.2"
egui= "0.33.2"
pdfium-render = { version = "0.8"}
image = "0.25"
dirs = "5"
once_cell = "1.21.3"
