[package]
name = "vb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "cargo"] }
fastembed = "5"
hf-hub = { version = "0.4.3", features = ["tokio"] }
qdrant-client = "1.16.0"
pdf-extract = "0.10.0"
rayon = "1.10"
uuid = { version = "1", features = ["v4"] }
unidecode = "0.3.0"
unicode-segmentation = "1.10"
lopdf = "0.38.0"
pdf_oxide = "0.1"
eframe = "0.33.2"
egui= "0.33.2"
dirs = "5"
once_cell = "1.21.3"
ort = {version = "=2.0.0-rc.10", features = ["coreml"]}
text-splitter = { version = "0.29.3", features = ["tiktoken-rs"] }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
pdfium-render = "0.8"  
image = "0.25"
tiktoken-rs = "0.9.1"
regex = "1.12.2"



